--- a/talks/2015.06.11/index.html
+++ b/talks/2015.06.11/index.html
@@ -35,9 +35,6 @@
     <h2></h2>
     <p>Khristian Kotov<br/></p>
   </hgroup>
-    <a href="https://github.com/kkotov/talks/zipball/gh-pages" class="example">
-     Download
-    </a>
   <article></article>  
 </slide>
     
@@ -45,28 +42,51 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>Summary</h2>
+    <h2>Status of L1-O2O</h2>
   </hgroup>
   <article data-timings="">
     <p><br></p>
 
-<p>As of Tuesday, L1-O2O runs in <span style="font-family:monospace; color:blue; font-weight:bold">CMSSW_7_4_2</span></p>
+<ul>
+<li><a href="http://kkotov.github.io/l1o2o/talks/2015.04.20/">System is upgraded</a> from the LHC Run 1 (thanks to Mike, et al.)</li>
+<li>It runs at p5: till 2015-06-03 (run #247955) in 72X and 74X after
 
-<p><br></p>
-
-<p>It includes Vasile&#39;s update to the <span style="font-family:monospace; color:blue; font-weight:bold">L1GtTriggerMenuConfigOnlineProd<span> </p>
-
-<p><br></p>
-
-<p>The <span style="font-family:monospace; color:blue; font-weight:bold">L1GtTriggerMenu</span> records are available in ORCON/ORCOFF</p>
+<ul>
+<li>according to Vasile, 74X includes the latest greatest L1 menu</li>
+</ul></li>
+<li>Soon it&#39;ll need to include the Stage 1 calorimeter trigger </li>
+</ul>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Status of the L1 menu</h2>
+  </hgroup>
   <article data-timings="">
-    
+    <ul>
+<li>The last menu picked up by L1-O2O: <span style="font-family:monospace; color:blue; font-weight:bold">L1Menu_Collisions2015_50nsGct_v3</span></li>
+<li>On request from Andrea Bocci following menus were queued for MC GT in 75X:
+<span style="font-family:monospace; color:blue; font-weight:bold">
+
+<ul>
+<li><a href="https://mmm.cern.ch/owa/redir.aspx?C=g0fmToO5rUCT1OBWlc5N8EHT2WH2e9IIekA0inysQfM8WHFKUDGl0jVwWe4c1LnnggldF9AzZMw.&amp;URL=https%3a%2f%2fcms-conddb.cern.ch%2fbrowser%2f%23search%2fProd%2fL1Menu_Collisions2015_25nsStage1_v3">L1Menu_Collisions2015_25nsStage1_v3</a></li>
+<li><a href="https://mmm.cern.ch/owa/redir.aspx?C=g0fmToO5rUCT1OBWlc5N8EHT2WH2e9IIekA0inysQfM8WHFKUDGl0jVwWe4c1LnnggldF9AzZMw.&amp;URL=https%3a%2f%2fcms-conddb.cern.ch%2fbrowser%2f%23search%2fProd%2fL1Menu_Collisions2015_50nsGct_v3">L1Menu_Collisions2015_50nsGct_v3</a></li>
+<li><a href="https://mmm.cern.ch/owa/redir.aspx?C=g0fmToO5rUCT1OBWlc5N8EHT2WH2e9IIekA0inysQfM8WHFKUDGl0jVwWe4c1LnnggldF9AzZMw.&amp;URL=https%3a%2f%2fcms-conddb.cern.ch%2fbrowser%2f%23search%2fProd%2fL1Menu_Collisions2015_lowPU_v3">L1Menu_Collisions2015_lowPU_v3</a>
+</span></li>
+</ul></li>
+<li>Several more requested menus were not found in OMDS:
+
+<ul>
+<li>L1Menu_Collisions2015_50nsGct_v2</li>
+<li>L1Menu_Collisions2015_50ns_v1</li>
+<li>L1Menu_Collisions2015_25ns_v2</li>
+<li>L1Menu_CollisionsHeavyIons2015_v0</li>
+</ul></li>
+</ul>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -77,13 +97,13 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Summary'>
+        data-slide=1 title='Status of L1-O2O'>
          1
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title=''>
+        data-slide=2 title='Status of the L1 menu'>
          2
       </a>
     </li>
