--- a/talks/2016.02.23/index.html
+++ b/talks/2016.02.23/index.html
@@ -52,7 +52,7 @@
 <ul>
 <li><p>code is invoked by a Function Manager (FM) call that provides <code>Run #</code> and <code>L1_KEY</code> arguments</p></li>
 <li><p>using <code>L1_KEY</code> it identifies subsystem specific keys and run the online producers</p></li>
-<li><p>online producers navigate further down the tables and pack the info in CondFormats</p></li>
+<li><p>online producers <a href="http://kkotov.github.io/l1o2o/talks/2016.01.18/#3">navigate further down the tables</a> and pack the info in CondFormats</p></li>
 <li><p>no feedback to FM is provided</p></li>
 </ul>
 
