--- a/talks/2016.05.24/index.html
+++ b/talks/2016.05.24/index.html
@@ -111,7 +111,7 @@
   <article data-timings="">
     <p>Parsing libraries differ between online and offline</p>
 
-<p>Due to the flexibility of XML, offline parsing often stumbles upon new configurations
+<p>Due to the flexibility of XML, offline parsing sometimes stumbles upon new configurations
 (e.g. due to missing delimiter specificator, extra whitespaces, ...) </p>
 
 <p>Potential solution is a validation suite (based on offline parsing) attached to the L1CE</p>
