--- a/talks/2016.11.28/index.html
+++ b/talks/2016.11.28/index.html
@@ -448,7 +448,7 @@ and my <a href="https://github.com/cms-sw/cmssw/blob/CMSSW_8_0_X/L1TriggerConfig
 
 <slide class="" id="slide-19" style="background:;">
   <hgroup>
-    <h2>Validating O2Oed CaloParams: DemuxEgs</h2>
+    <h2>Validating O2Oed CaloParams: Taus</h2>
   </hgroup>
   <article data-timings="">
     
@@ -600,7 +600,7 @@ and my <a href="https://github.com/cms-sw/cmssw/blob/CMSSW_8_0_X/L1TriggerConfig
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=19 title='Validating O2Oed CaloParams: DemuxEgs'>
+        data-slide=19 title='Validating O2Oed CaloParams: Taus'>
          19
       </a>
     </li>
