--- a/talks/2017.03.01/index.html
+++ b/talks/2017.03.01/index.html
@@ -104,7 +104,7 @@
 </tbody></table>
 
 </div>
-<div style='float:right;width:100%;'>
+<div>
   <p><br></p>
 
 <p>Additional <span style="font-weight:bold;font-size:smaller;color:green">L1TMuonEndCapForests[_Stage2v0_hlt]</span>
@@ -272,7 +272,7 @@ show data/emulator agreement for Heavy Ion runs</p>
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>L1T tags for Monte Carlo GTs</h2>
+    <h2>A snapshot of static config pushed to CondDB</h2>
   </hgroup>
   <article data-timings="">
     <p>As a first step towards configuring L1T emulators from CondDB I&#39;ve produced
@@ -299,6 +299,8 @@ the following tags from fake producer and static files in v91.12:</p>
 
 <p>Additionally, HI payload for <span style="font-weight:bold;color:brown">CALO</span>:
 <a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloStage2Params_static_v91.12_v3_3_1_HI">L1TCaloStage2Params_static_v91.12_v3_3_1_HI</a></p>
+
+<p>The closure test shows 100% agreement with statics (as expected)</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -346,7 +348,7 @@ the following tags from fake producer and static files in v91.12:</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='L1T tags for Monte Carlo GTs'>
+        data-slide=7 title='A snapshot of static config pushed to CondDB'>
          7
       </a>
     </li>
