--- a/talks/2017.03.01/index.html
+++ b/talks/2017.03.01/index.html
@@ -262,9 +262,41 @@ show data/emulator agreement for Heavy Ion runs</p>
 <p>A special case:</p>
 
 <p><span style="font-weight:bold;color:brown">CALO:</span>
-<a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt_HI2016</a> - fully validated tag for Heavy Ions </p>
+<a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt_HI2016</a> - fully validated tag for Heavy Ions 
+and end-of-2016 \(pp\) runs, e.g.:</p>
 
-<p>We are also almost done with validation of end-of-2016 \(pp\) payload (to be followed-up shortly)</p>
+<p><a href="EgEt.pdf">e/gamma ET</a>
+<a href="EgEta.pdf">e/gamma eta</a>
+<a href="EgPhi.pdf">e/gamma phi</a></p>
+
+<p>(sorry for the pdf format)</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Clibration constants</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><a href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com">https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com</a></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Moving from static pythons to CondDB configs</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><br>
+L1T emulators always ran with static pythons</p>
+
+<p>Before we choose CondDB configuration as our default, we&#39;ve made a closure test</p>
+
+<p>The emulators were tested with payloads generated from static pythons</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -348,8 +380,20 @@ the following tags from fake producer and static files in v91.12:</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='A snapshot of static config pushed to CondDB'>
+        data-slide=7 title='Clibration constants'>
          7
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=8 title='Moving from static pythons to CondDB configs'>
+         8
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=9 title='A snapshot of static config pushed to CondDB'>
+         9
       </a>
     </li>
   </ul>
