--- a/talks/2017.03.01/index.html
+++ b/talks/2017.03.01/index.html
@@ -35,6 +35,9 @@
     <h2></h2>
     <p>Khristian Kotov<br/></p>
   </hgroup>
+    <a href="https://github.com/kkotov/talks/zipball/gh-pages" class="example">
+     Download
+    </a>
   <article></article>  
 </slide>
     
@@ -146,7 +149,7 @@ and override a subset of parameters with values extracted from online DB </p>
     <p>O2O can be ran on lxplus provided you have the DB access token (great for testing!):</p>
 
 <ul>
-<li><span style="font-family:monospace">./runL1-O2O-iov.sh 285832 collisions2016_TSC/v206 collisions2016_RS/v291</span></li>
+<li><span style="font-family:monospace;font-size:smaller">./runL1-O2O-iov.sh 285832 collisions2016_TSC/v206 collisions2016_RS/v291</span></li>
 </ul>
 
 <p>Splitting a monolithic job in a <a href="https://github.com/cms-sw/cmssw/blob/CMSSW_9_0_X/L1TriggerConfig/Utilities/test/runOneByOne.sh">sequence per-payload jobs</a> doubles running time (13s \(\rightarrow\) 25s)</p>
@@ -262,11 +265,11 @@ show data/emulator agreement for Heavy Ion runs</p>
 <p>A special case:</p>
 
 <p><span style="font-weight:bold;color:brown">CALO:</span>
-<a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt_HI2016</a> - fully validated tag for Heavy Ions 
-and end-of-2016 \(pp\) runs, e.g.:</p>
+<a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt_HI2016</a> - fully validated tag for 
+the end-of-2016 runs (\(pp\), HI) e.g.:</p>
 
-<p><a href="EgEt.pdf">e/gamma ET</a>
-<a href="EgEta.pdf">e/gamma eta</a>
+<p><a href="EgEt.pdf">e/gamma ET</a>, 
+<a href="EgEta.pdf">e/gamma eta</a>,
 <a href="EgPhi.pdf">e/gamma phi</a></p>
 
 <p>(sorry for the pdf format)</p>
