--- a/talks/2017.03.01/index.html
+++ b/talks/2017.03.01/index.html
@@ -262,11 +262,11 @@ show data/emulator agreement for Heavy Ion runs</p>
 <p><span style="font-weight:bold;color:brown">OMTF:</span>
 <a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TMuonOverlapParams_Stage2v0_hlt">L1TMuonOverlapParams_Stage2v0_hlt</a></p>
 
-<p>A special case:</p>
+<p>A special case yet to be uploaded to the CondDB:</p>
 
 <p><span style="font-weight:bold;color:brown">CALO:</span>
-<a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt_HI2016</a> - fully validated tag for 
-the end-of-2016 runs (\(pp\), HI) e.g.:</p>
+<a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt</a> - fully validated tag for 
+end-of-2016 runs (\(pp\), HI):</p>
 
 <p><a href="EgEt.pdf">e/gamma ET</a>, 
 <a href="EgEta.pdf">e/gamma eta</a>,
