--- a/talks/2017.03.01/index.html
+++ b/talks/2017.03.01/index.html
@@ -268,9 +268,12 @@ show data/emulator agreement for Heavy Ion runs</p>
 <a href="https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016">L1TCaloParams_Stage2v0_hlt</a> - fully validated tag for 
 end-of-2016 runs (\(pp\), HI):</p>
 
-<p><a href="EgEt.pdf">e/gamma ET</a>, 
+<ul>
+<li>comparison of raw data vs. emulator configured from O2O:
+<a href="EgEt.pdf">e/gamma ET</a>, 
 <a href="EgEta.pdf">e/gamma eta</a>,
-<a href="EgPhi.pdf">e/gamma phi</a></p>
+<a href="EgPhi.pdf">e/gamma phi</a></li>
+</ul>
 
 <p>(sorry for the pdf format)</p>
 
@@ -283,7 +286,8 @@ end-of-2016 runs (\(pp\), HI):</p>
     <h2>Clibration constants</h2>
   </hgroup>
   <article data-timings="">
-    <p><a href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com">https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com</a></p>
+    <p>Running 
+[<a href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com">https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com</a></p>
 
   </article>
   <!-- Presenter Notes -->
