--- a/talks/2017.03.01/index.html
+++ b/talks/2017.03.01/index.html
@@ -104,7 +104,7 @@
 </tbody></table>
 
 </div>
-<div>
+<div style='float:right;width:100%;'>
   <p><br></p>
 
 <p>Additional <span style="font-weight:bold;font-size:smaller;color:green">L1TMuonEndCapForests[_Stage2v0_hlt]</span>
@@ -266,10 +266,7 @@ show data/emulator agreement for Heavy Ion runs</p>
 end-of-2016 runs (\(pp\), HI):</p>
 
 <ul>
-<li>comparison of raw data vs. emulator configured from O2O:
-<a href="EgEt.pdf">e/gamma ET</a>, 
-<a href="EgEta.pdf">e/gamma eta</a>,
-<a href="EgPhi.pdf">e/gamma phi</a></li>
+<li>comparison of raw data vs. emulator configured from O2O: e/\(\gamma\) <a href="EgEt.pdf">ET</a>, <a href="EgEta.pdf">eta</a>, <a href="EgPhi.pdf">phi</a></li>
 </ul>
 
 <p>(sorry for the pdf format)</p>
